WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99950
[BlackBerry] Missing some cookies in HTTP response header when set several cookies in one "Set-Cookie" header.
https://bugs.webkit.org/show_bug.cgi?id=99950
Summary
[BlackBerry] Missing some cookies in HTTP response header when set several co...
Peter Wang
Reported
2012-10-21 19:54:21 PDT
Created
attachment 169823
[details]
test case Visit the attached test case, from Inspector we can see we've missed several cookies in response. I've checked this problem. The code of Inspector is ok, we really missed them when we made response headers.
Attachments
test case
(705 bytes, application/zip)
2012-10-21 19:54 PDT
,
Peter Wang
no flags
Details
Patch
(2.53 KB, patch)
2012-10-21 20:48 PDT
,
Peter Wang
no flags
Details
Formatted Diff
Diff
Patch
(2.60 KB, patch)
2012-10-22 02:21 PDT
,
Peter Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2012-10-21 19:56:52 PDT
Attachment 169823
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files']" exit_code: 1 Total errors found: 0 in 0 files If any of these errors are false positives, please file a bug against check-webkit-style.
Peter Wang
Comment 2
2012-10-21 20:48:24 PDT
Created
attachment 169825
[details]
Patch
Charles Wei
Comment 3
2012-10-21 23:27:00 PDT
Comment on
attachment 169825
[details]
Patch This looks good to me.
George Staikos
Comment 4
2012-10-21 23:28:55 PDT
Comment on
attachment 169825
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=169825&action=review
Please make the comment clearer first.
> Source/WebCore/platform/network/blackberry/NetworkJob.cpp:338 > + // If there are several "Set-Cookie" headers, we should combine the followed with headed.
"following ones with this header" is what is meant here?
Peter Wang
Comment 5
2012-10-22 02:10:28 PDT
(In reply to
comment #4
)
> (From update of
attachment 169825
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=169825&action=review
> > Please make the comment clearer first. > > > Source/WebCore/platform/network/blackberry/NetworkJob.cpp:338 > > + // If there are several "Set-Cookie" headers, we should combine the followed with headed. > > "following ones with this header" is what is meant here?
ok. sorry.
Peter Wang
Comment 6
2012-10-22 02:21:26 PDT
Created
attachment 169857
[details]
Patch
George Staikos
Comment 7
2012-10-22 21:28:25 PDT
Comment on
attachment 169857
[details]
Patch I would have liked to see a test with this. Not sure how though.
WebKit Review Bot
Comment 8
2012-10-22 21:33:18 PDT
Comment on
attachment 169857
[details]
Patch Clearing flags on attachment: 169857 Committed
r132177
: <
http://trac.webkit.org/changeset/132177
>
WebKit Review Bot
Comment 9
2012-10-22 21:33:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug