[BlackBerry] Missing some cookies in HTTP response header when set several cookies in one "Set-Cookie" header. https://bugs.webkit.org/show_bug.cgi?id=99950

Patch by Peter Wang <peter.wang@torchmobile.com.cn> on 2012-10-22
Reviewed by George Staikos.

In "NetworkJob::handleNotifyHeaderReceived", if there are several "Set-Cookie" headers,
we should combine the following ones with the first.

No new test case.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::handleNotifyHeaderReceived):

Canonical link: https://commits.webkit.org/118097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132177 268f45cc-cd09-0410-ab3c-d52691b4dbfc